--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -8,13 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    style="@style/activies"
     tools:context="quo.quo.EducationActivity">
 
-    <TextView
-        android:text="Educación"
-        android:textSize="36dp"
-        android:layout_width="332dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lista"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 
 </RelativeLayout>
